Add appsettings.json variable substitution to the workflow

--- a/AugustaGourmet.Api.WebAPI/appsettings.json
+++ b/AugustaGourmet.Api.WebAPI/appsettings.json
@@ -5,5 +5,18 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": 1
+  },
+  "EmailSettings": {
+    "ImapServer": "imap.gmail.com",
+    "SmtpServer": "smtp.gmail.com",
+    "UsernameEmail": 2,
+    "UsernamePassword": 3
+  },
+  "TelegramSettings": {
+    "Token": 4,
+    "AdminChatId": 5
+  }
 }
