--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,8 +35,19 @@ jobs:
       - name: Build with dotnet
         run: dotnet build --configuration Release
 
-      - name: dotnet publish
+      - name: Publish with dotnet
         run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
+
+      - name: App Settings Variable Substitution
+        uses: microsoft/variable-substitution@v1
+        with:
+          files: "${{env.DOTNET_ROOT}}/myapp/appsettings.json"
+        env:
+          ConnectionStrings.DefaultConnection: ${{ secrets.MSSQL_CONNECTION_STRING }}
+          EmailSettings.UsernameEmail: ${{ secrets.GMAIL_IMAP_USER_EMAIL }}
+          EmailSettings.UsernamePassword: ${{ secrets.GMAIL_IMAP_USER_PWD }}
+          TelegramSettings.Token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+          TelegramSettings.AdminChatId: ${{ secrets.TELEGRAM_ADMIN_CHATID }}
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
