--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,6 +56,7 @@ jobs:
           path: ${{env.DOTNET_ROOT}}/myapp
 
   deploy-dotnet:
+    name: Deploy .NET to Azure
     runs-on: ubuntu-latest
     needs: dotnet
     outputs:
@@ -99,6 +100,7 @@ jobs:
 
       - name: Install dependencies, build, and test
         run: |
+          cd UI
           yarn install
           yarn vite build
 
@@ -109,6 +111,7 @@ jobs:
           path: ui/dist
 
   deploy-ts:
+    name: Deploy UI app to Azure
     runs-on: ubuntu-latest
     needs: ts
     environment:
