--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,8 +59,6 @@ jobs:
     name: Deploy .NET to Azure
     runs-on: ubuntu-latest
     needs: dotnet
-    outputs:
-      api-url: ${{ steps.dotnet-webapp-deploy.outputs.webapp-url }}
     environment:
       name: "production"
       url: ${{ steps.dotnet-webapp-deploy.outputs.webapp-url }}
@@ -79,17 +77,11 @@ jobs:
           publish-profile: ${{ secrets.AZURE_API_PUBLISH_PROFILE }}
           package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
 
-      - name: Extract API URL
-        id: step1
-        run: |
-          echo "::set-output name=api_url::${api_url}"
-
   ts:
     name: Build TS bundle
     runs-on: ubuntu-latest
-    needs: deploy-dotnet
     env:
-      VITE_API_URL: ${{ needs.deploy-dotnet.outputs.api-url }}
+      VITE_API_URL: ${{ secrets.AZURE_API_WEBAPP_URL }}
     steps:
       - uses: actions/checkout@v3
 
