--- a/AugustaGourmet.Api.Persistence/AugustaGourmet.Api.Persistence.csproj
+++ b/AugustaGourmet.Api.Persistence/AugustaGourmet.Api.Persistence.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="EntityFramework" Version="6.4.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.2" />
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0" />
   </ItemGroup>
 
