--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,12 +5,10 @@ env:
   DOTNET_VERSION: "8.0.x"
 
 on:
-  pull_request:
-    branches: ["main"]
-  push:
-    branches:
-      - development
   workflow_dispatch:
+  pull_request:
+    branches:
+      - "main"
 
 jobs:
   dotnet:
