--- a/UI/package.json
+++ b/UI/package.json
@@ -16,7 +16,8 @@
     "ra-language-pt-br": "^1.3.6",
     "react": "^18.2.0",
     "react-admin": "^4.16.4",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.1/xlsx-0.20.1.tgz"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
