--- a/AugustaGourmet.Api.Infrastructure/AugustaGourmet.Api.Infrastructure.csproj
+++ b/AugustaGourmet.Api.Infrastructure/AugustaGourmet.Api.Infrastructure.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -13,6 +13,7 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0" />
     <PackageReference Include="Telegram.Bot" Version="19.0.0" />
+    <PackageReference Include="WhatsappBusiness.CloudApi" Version="1.0.26" />
   </ItemGroup>
 
   <ItemGroup>
