Add initial implementation of jwt and authentication

--- a/AugustaGourmet.Api.Persistence/AugustaGourmet.Api.Persistence.csproj
+++ b/AugustaGourmet.Api.Persistence/AugustaGourmet.Api.Persistence.csproj
@@ -12,7 +12,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\AugustaGourmet.Api.Application\AugustaGourmet.Api.Application.csproj" />
+    <ProjectReference
+      Include="..\AugustaGourmet.Api.Application\AugustaGourmet.Api.Application.csproj" />
   </ItemGroup>
 
 </Project>
