--- a/AugustaGourmet.Api.WebAPI/appsettings.json
+++ b/AugustaGourmet.Api.WebAPI/appsettings.json
@@ -18,5 +18,18 @@
   "TelegramSettings": {
     "Token": 4,
     "AdminChatId": 5
+  },
+  "WhatsappSettings": {
+    "AccessToken": 6,
+    "AdminPhoneNumber": 7,
+    "BusinessAccountId": 8,
+    "BusinessId": 9,
+    "PhoneNumberId": 10
+  },
+  "JwtSettings": {
+    "Secret": 11,
+    "Issuer": 12,
+    "Audience": 13,
+    "ExpiryInMinutes": 14
   }
 }
