--- a/.github/workflows/image-build.yml
+++ b/.github/workflows/image-build.yml
@@ -4,7 +4,8 @@ env:
   ENV ASPNETCORE_ENVIRONMENT: Production
 
 on:
-  workflow_dispatch:
+  release:
+    types: [published]
 
 jobs:
   push-store-image:
@@ -14,17 +15,17 @@ jobs:
       packages: write
 
     steps:
-      - name: 'Checkout GitHub Action'
+      - name: Checkout GitHub Action
         uses: actions/checkout@main
 
-      - name: 'Login to GitHub Container Registry'
+      - name: Login to GitHub Container Registry
         uses: docker/login-action@v1
         with:
           registry: ghcr.io
           username: ${{github.actor}}
           password: ${{secrets.GITHUB_TOKEN}}
 
-      - name: 'Build Image'
+      - name: Build Image
         run: |
           docker build . --tag ghcr.io/${{github.repository_owner}}/${{github.repository}}:latest
           docker push ghcr.io/${{github.repository_owner}}/${{github.repository}}:latest
